--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.0'
 	id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.0'
 }
+apply plugin: 'kotlin-kapt'
 
 group = 'com.ys'
 version = '0.0.1-SNAPSHOT'
@@ -37,6 +38,9 @@ dependencies {
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.mapstruct:mapstruct:1.6.0'
+	kapt 'org.mapstruct:mapstruct-processor:1.6.0'
+
 }
 
 tasks.withType(KotlinCompile) {
