--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
     master:
-      jdbc-url: jdbc:mariadb://mariadbinstance.cso4grbqetkj.ap-northeast-2.rds.amazonaws.com:3306/innodb??useUnicode=true&characterEncoding=utf8
+      jdbc-url: jdbc:mariadb://localhost:3306/mysql??useUnicode=true&characterEncoding=utf8
       driver-class-name: org.mariadb.jdbc.Driver
-      username: mariaAdm
-      password: mariaAdm!977
+      username: root
+      password: codb
     slave:
-      jdbc-url: jdbc:mariadb://mariadbinstance.cso4grbqetkj.ap-northeast-2.rds.amazonaws.com:3306/innodb??useUnicode=true&characterEncoding=utf8
+      jdbc-url: jdbc:mariadb://localhost:3306/mysql??useUnicode=true&characterEncoding=utf8
       driver-class-name: org.mariadb.jdbc.Driver
-      username: mariaAdm
-      password: mariaAdm!977
+      username: root
+      password: codb
 spring.main.allow-bean-definition-overriding: true
 
 
